add estilização da página

--- a/index.html
+++ b/index.html
@@ -9,29 +9,30 @@
     <script defer src="./js/script.js"></script>
 </head>
 <body>
-    <div class="register-container">
-        <div class="register-banner">
-            <div class="banner-layer">
+    <div id="register-container">
+        <div id="register-banner">
+            <div id="banner-layer">
                 <h1>Seja bem-vindo</h1>
             </div>
-            <div class="register-form">
+        </div>
+            <div id="register-form">
                 <h2>Crie sua conta</h2>
                 <p>Registre-se para utilizar todas as funcionalidade do sistema</p>
                 <div class="form-control">
                     <label for="name">Nome</label>
-                    <input type="text" name="name" id="name" placeholder="Digite seu nome">
+                    <input type="text" name="name" id="name" placeholder="Digite seu nome"/>
                 </div>
                 <div class="form-control">
                     <label for="email">E-mail</label>
-                    <input type="text" name="emai" id="email" placeholder="Digite seu e-mail">
+                    <input type="text" name="emai" id="email" placeholder="Digite seu e-mail"/>
                 </div>
                 <div class="form-control">
                     <label for="name">Senha</label>
-                    <input type="text" name="senha" id="senha" placeholder="Digite sua senha">
+                    <input type="text" name="senha" id="senha" placeholder="Digite sua senha"/>
                 </div>
                 <p>
                     Quer ajuda para criar uma senha segura? 
-                    <span id="generate-password">Clique aqui</span>
+                    <span id="generate-password">Clique aqui.</span>
                 </p>
                 <div id="generated-password">
                     <p>Aqui está sua senha</p>
@@ -43,7 +44,6 @@
                 </div>
                 <input type="submit" value="cadastrar">
             </div>
-        </div>
     </div>
 </body>
 </html>
